; ModuleID = '/home/carl/AnghaBench/tmux/extr_cmd-find.c_cmd_find_map_table.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_cmd-find.c_cmd_find_map_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ([2 x i8*]*, i8*)* @cmd_find_map_table to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @cmd_find_map_table([2 x i8*]* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca [2 x i8*]*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store [2 x i8*]* %0, [2 x i8*]** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 0, i64* %6, align 8
  br label %7

7:                                                ; preds = %30, %2
  %8 = load [2 x i8*]*, [2 x i8*]** %4, align 8
  %9 = load i64, i64* %6, align 8
  %10 = getelementptr inbounds [2 x i8*], [2 x i8*]* %8, i64 %9
  %11 = getelementptr inbounds [2 x i8*], [2 x i8*]* %10, i64 0, i64 0
  %12 = load i8*, i8** %11, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %33

14:                                               ; preds = %7
  %15 = load i8*, i8** %5, align 8
  %16 = load [2 x i8*]*, [2 x i8*]** %4, align 8
  %17 = load i64, i64* %6, align 8
  %18 = getelementptr inbounds [2 x i8*], [2 x i8*]* %16, i64 %17
  %19 = getelementptr inbounds [2 x i8*], [2 x i8*]* %18, i64 0, i64 0
  %20 = load i8*, i8** %19, align 8
  %21 = call i64 @strcmp(i8* %15, i8* %20)
  %22 = icmp eq i64 %21, 0
  br i1 %22, label %23, label %29

23:                                               ; preds = %14
  %24 = load [2 x i8*]*, [2 x i8*]** %4, align 8
  %25 = load i64, i64* %6, align 8
  %26 = getelementptr inbounds [2 x i8*], [2 x i8*]* %24, i64 %25
  %27 = getelementptr inbounds [2 x i8*], [2 x i8*]* %26, i64 0, i64 1
  %28 = load i8*, i8** %27, align 8
  store i8* %28, i8** %3, align 8
  br label %35

29:                                               ; preds = %14
  br label %30

30:                                               ; preds = %29
  %31 = load i64, i64* %6, align 8
  %32 = add i64 %31, 1
  store i64 %32, i64* %6, align 8
  br label %7

33:                                               ; preds = %7
  %34 = load i8*, i8** %5, align 8
  store i8* %34, i8** %3, align 8
  br label %35

35:                                               ; preds = %33, %23
  %36 = load i8*, i8** %3, align 8
  ret i8* %36
}

declare dso_local i64 @strcmp(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
